# python-project-50

./: .gitignore  Makefile  README.md  cli.py  coverage.xml  demo.cast  pyproject.toml  setup.cfg
.github/workflows/: main.yml  python-package.yml
gendiff/: Makefile  __init__.py  build_diff.py  cki.py  cli.py  formatting.py  gen_diff.py  gendiff.py  parser.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/formatters/: stylish.py
gendiff/scripts/: gendiff.py
scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file2_1.yml  file3.json  file_1.json  file_1.yml  file_2.json  file_2.yml  json.txt  result_test1.txt  result_test2_json.txt  result_test2_yml.txt  stylish.txt
tests/test/: test1.py  test_gendiff.py
