[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Shows the difference between two files"
authors = ["Oleg Latypov <latol179@mail.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.gendiff:main"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
flake8 = "^6.1.0"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

